Update closure.jpg path

--- a/Closure.ipynb
+++ b/Closure.ipynb
@@ -316,7 +316,7 @@
    "source": [
     "클로저(closure) : 함수를 둘러싼 환경(지역 변수, 코드 등)을 유지하다가, 함수를 호출할 때 다시 꺼내서 사용하는 함수\n",
     "- c에 저장된 함수가 클로저 \n",
-    "![closure](Python_codingdojang/closure.jpg)\n",
+    "![closure](closure.jpg)\n",
     "지역 변수와 코드를 묶어서 사용하고 싶을 때 활용함\n",
     "클로저에 속한 지역 변수는 바깥에서 직접 접근할 수 없으므로 데이터를 숨기고 싶을 때 활용함\n",
     "\n",
