--- a/41_coroutine.ipynb
+++ b/41_coroutine.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# 41 코루틴 사용하기\n",
     "\n",
-    "\n",
+    "- 일반 함수  \n",
     "calc가 메인 루틴(main routine)이면 add는 calc의 서브 루틴(sub routine)이다. "
    ]
   },
@@ -146,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,6 +160,7 @@
     "    while True:\n",
     "        x = (yield)  # 코루틴 밖에서 값을 받아오면서 바깥으로 값을 전달 \n",
     "        print(x, end=' ')\n",
+    "        \n",
     "co = number_coroutine()\n",
     "next(co)\n",
     "\n",
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +278,8 @@
     "\n",
     "\n",
     "\n",
-    "## 41.4 하위 코루틴의 반환값 가져오기"
+    "## 41.4 하위 코루틴의 반환값 가져오기\n",
+    "- yield from"
    ]
   },
   {
@@ -302,7 +302,7 @@
     "    while True:\n",
     "        x = (yield)\n",
     "        if x is None:\n",
-    "            return total   # 코루틴 종료 \n",
+    "            return total   # 코루틴 종료 (Python 3.7)\n",
     "            raise StopIteration(total) # StopIteration에 반환할 값을 지정한다. (Python 3.6)\n",
     "        total += x \n",
     "\n",
@@ -382,20 +382,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 + 2, 4 - 9\n",
+      "3\n",
+      "-5\n"
+     ]
+    }
+   ],
    "source": [
     "def calc():\n",
+    "    answer = 0\n",
     "    while True:\n",
     "        expression = (yield answer)\n",
+    "        x, operation, y = expression.split()\n",
+    "        x = int(x); y = int(y)\n",
+    "        if operation == '+':\n",
+    "            answer = x+y\n",
+    "        elif operation == '-':\n",
+    "            answer = x-y\n",
+    "        elif operation == '*':\n",
+    "            answer = x*y\n",
+    "        elif operation == '/':\n",
+    "            answer = x/y\n",
+    "            \n",
     "        \n",
     "        \n",
     "\n",
     "\n",
     "\n",
-    "expressions = input().split(', ')\n",
-    " \n",
+    "expressions = list(input().split(', '))\n",
+    "\n",
     "c = calc()\n",
     "next(c)\n",
     " \n",
@@ -404,6 +426,13 @@
     " \n",
     "c.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
